# poc-grpc-wasm

./: Cargo.toml  README.md  package-lock.json
grpc-wasm-client/: Cargo.toml  build.rs  test.sh
grpc-wasm-client/src/: lib.rs
grpc-wasm-client/www/: index.js  package-lock.json  package.json
grpc-wasm-server/: Cargo.toml
grpc-wasm-server/src/: lib.rs  server.rs
proto/: hello.proto
